--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <header>Sketch Thing</header>
+    <header><span>Sketch Thing</span>
+    <button class="size">Change # of Boxes</button>
+</header>
  <main>
     <div class="container"></div>
  </main>   
