--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-    <header><span>Sketch Thing</span>
-    <button class="size">Change # of Boxes</button>
-</header>
  <main>
-    <div class="container"></div>
+    <span class="all">
+        <span class="wrapper">
+            <h1>Sketch Thing</h1>
+            <button class="size">Change # of Boxes</button>
+        </span>
+        <div class="container"></div>
+    </span>
  </main>   
 </body>
 </html>
