Make code prettier

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sketch Thing</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="scripts.js" defer></script>
-</head>
-<body>
- <main>
-    <span class="all">
+  </head>
+  <body>
+    <main>
+      <span class="all">
         <span class="wrapper">
-            <h1>Sketch Thing</h1>
-            <button class="size">Change # of Boxes</button>
+          <h1>Sketch Thing</h1>
+          <button class="size">Change # of Boxes</button>
         </span>
         <div class="container"></div>
-    </span>
- </main>   
-</body>
+      </span>
+    </main>
+  </body>
 </html>
